add tempo de concxao com db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
+spring.datasource.hikari.connectionTimeout=35000 # Tempo limite em milissegundos (aqui é definido como 35 segundos)
+spring.datasource.hikari.maximumPoolSize=10     # Número máximo de conexões no pool
+
+
 api.key.from.openai=${APIKEY}
