add tempo de concxao com db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
-spring.datasource.hikari.connectionTimeout=5000 # Tempo limite em milissegundos (aqui é definido como 5 segundos)
-spring.datasource.hikari.maximumPoolSize=10     # Número máximo de conexões no pool
+spring.datasource.hikari.connectionTimeout=5000
+spring.datasource.hikari.maximumPoolSize=10
 
 
 api.key.from.openai=${APIKEY}
