alterando o application porperties para teste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://${HOSTNAME:localhost}:${PORT:5432}/${DBNAME:jornada_milhas}
-spring.datasource.username=${DBUSER:postgres}
-spring.datasource.password=${DBPASSWORD:test1234}
+spring.datasource.url=jdbc:postgresql://db.gmxwigliolbhqtfzyipr.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=ETtvQdj5sZwWxFuS
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -9,8 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
-spring.datasource.hikari.connectionTimeout=35000
-spring.datasource.hikari.maximumPoolSize=10
-
+#spring.datasource.hikari.connectionTimeout=35000
+#spring.datasource.hikari.maximumPoolSize=10
 
 api.key.from.openai=${APIKEY}
