Refactorando o algoritimo do metodo randomThreeDeposition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-spring.datasource.url=jdbc:postgresql://db.gmxwigliolbhqtfzyipr.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=ETtvQdj5sZwWxFuS
+spring.datasource.url=jdbc:postgresql://${HOSTNAME}:${PORT}/${DBNAME}
+spring.datasource.username=${DBUSER}
+spring.datasource.password=${DBPASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
-
-#spring.datasource.hikari.connectionTimeout=35000
-#spring.datasource.hikari.maximumPoolSize=10
 
 api.key.from.openai=${APIKEY}
